--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -3,7 +3,7 @@
   font-size: .875rem;
   line-height: 114%;
   text-align: right;
-  white-space: nowrap;
+  white-space: normal;
   margin: 0;
   padding: 0;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
